--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -107,17 +107,17 @@ The team members are as follows:
 \end{itemize}
 In addition to the list above, Dr. Alan Wassyng will be the Project Advisor. He will be assisted by Bennett Mackenzie, Nicholas Annable, Stephen Wynn-Williams and Viktor Smirnov for marking and providing advice to the team.
 \subsection{Roles \& Responsibilities}
-See Table \ref{rr} for a breakdown of roles and responsibilities.
+See Table \ref{rr} for a breakdown of roles and responsibilities, backup members will italicized.
 \begin{table}[H] % TODO maybe fix table?
 \centering
 \caption{Roles \& Responsibilities Breakdown} 
 \label{rr}
-\begin{tabularx}{\textwidth}{| X | X | X |}
+\begin{tabularx}{\textwidth}{| l | p{4cm} | X |}
 \hline
 Role & Member(s) & Responsibility \\ \hline
-Scribe & Sharon Platkin & Taking notes for all meetings \newline Posting notes to Slack after meetings \newline Booking rooms for team meetings  \\ \hline
-DevOps Developer & Christopher McDonald & Solving issues related to GitHub \newline Configuring CI Tools \newline Merging code changes into the \textit{master} branch  \\ \hline
-Team Contact & Christopher McDonald & Handle a majority of communication with Project Advisor and Teaching Assistants \\ \hline
+Scribe & Sharon Platkin \newline \textit{Jared Rayner} & Taking notes for all meetings \newline Posting notes to Slack after meetings \newline Booking rooms for team meetings  \\ \hline
+DevOps Developer & Christopher McDonald \newline \textit{Sharon Platkin} & Solving issues related to GitHub \newline Configuring CI Tools \newline Merging code changes into the \textit{master} branch  \\ \hline
+Team Contact & Christopher McDonald \newline \textit{Nisarg Patel} & Handle a majority of communication with Project Advisor and Teaching Assistants \\ \hline
 Hardware Team Member & Janak Patel \newline Jared Rayner \newline Nisarg Patel & Handle most hardware focused work tasks \\ \hline
 Software Team Member & Christopher McDonald \newline Harit Patel \newline Sam Hamel \newline Sharon Platkin & Handle most software focused work tasks \\ \hline
 \end{tabularx}
