--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -107,7 +107,7 @@ The team members are as follows:
 \end{itemize}
 In addition to the list above, Dr. Alan Wassyng will be the Project Advisor. He will be assisted by Bennett Mackenzie, Nicholas Annable, Stephen Wynn-Williams and Viktor Smirnov for marking and providing advice to the team.
 \subsection{Roles \& Responsibilities}
-See Table \ref{rr} for a breakdown of roles and responsibilities, backup members will italicized.
+See Table \ref{rr} for a breakdown of roles and responsibilities. When a backup member is needed, they will be listed in italics.
 \begin{table}[H] % TODO maybe fix table?
 \centering
 \caption{Roles \& Responsibilities Breakdown} 
